# ask-them-all

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  TODO.md  main.py  pyproject.toml  pytest.ini
askthemall/: app.py  config.py  containers.py  settings.py
askthemall/clients/gemini/: __init__.py
askthemall/clients/google/: __init__.py
askthemall/clients/groq/: __init__.py
askthemall/clients/lc/: __init__.py
askthemall/core/: client.py  model.py  persistence.py
askthemall/lc/: __init__.py
askthemall/opensearch/: __init__.py
askthemall/view/: __init__.py  helpers.py  model.py  settings.py
css/: styles.css
tests/: test_gemini_client.py  test_google_client.py  test_langchain_client.py
tests/core/persistence/: __init__.py
tests/opensearch/: conftest.py  test_chat_bot_repository.py  test_opensearch_repository.py
